--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -1,6 +1,5 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">fictio</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-</nav>
+<button mat-button [matMenuTriggerFor]="menu">fictio</button>
+<mat-menu #menu="matMenu">
+  <button mat-menu-item>Créer une fiction</button>
+  <button mat-menu-item>Paramètres</button>
+</mat-menu>
