--- a/src/app/components/modal/modal.component.html
+++ b/src/app/components/modal/modal.component.html
@@ -1,20 +1,4 @@
-<ng-template #content let-c="close" let-d="dismiss" >
-    <div class="modal-header">
-        <h4 class="modal-title">Créer une fiction</h4>
-        <button type="button" class="close" aria-label="Close" (click)="d('Cross click')">
-            <span aria-hidden="true">&times;</span>
-        </button>
-    </div>
-    <div class="modal-body">
-        <app-add-fiction></app-add-fiction>
-    </div>
+<h2>Ajout d'une fiction</h2>
 
-    <div class="modal-footer">
-        <!-- (click) passes input value to add() and then clears the input -->
-        <button type="button" class="btn btn-outline-dark" (click)="c('Close click')">Fermer</button>
-    </div>
-</ng-template>
+<app-add-fiction></app-add-fiction>
 
-<button class="btn btn-lg btn-outline-primary" (click)="open(content)">Créer un projet</button>
-
-<hr>
