--- a/src/styles.css
+++ b/src/styles.css
@@ -1,14 +1,20 @@
-/* You can add global styles to this file, and also import other style files */
+@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
 
-#main-header{
-    text-align: center;
+body {
+  font-family: Roboto, Arial, sans-serif;
+  margin: 0;
 }
 
-.carte-item {
-    padding: 10px;
-    margin-bottom: 8px;
+.basic-container {
+  padding: 5px;
 }
 
-.groupe {
+.version-info {
+  font-size: 8pt;
+  float: right;
+}
 
+.container{
+  margin: auto;
+  width: 98%;
 }
