--- a/src/app/pages/page-accueil/page-accueil.component.html
+++ b/src/app/pages/page-accueil/page-accueil.component.html
@@ -1,35 +1,7 @@
-
-<mat-card>Simple card
-<ol>
-  <li>
-    <mat-form-field>
-      <input matInput [(ngModel)]="name" placeholder="What's your name?">
-    </mat-form-field>
-  </li>
-  <li>
-    <button mat-raised-button (click)="openDialog()">Pick one</button>
-  </li>
-  <li *ngIf="animal">
-    You chose: <i>{{animal}}</i>
-  </li>
-</ol>
-</mat-card>
+<button class="add" mat-fab (click)="openDialog()">
+  <mat-icon mat-raised-button >add</mat-icon>
+</button>
 
 <app-fictions></app-fictions>
 
-<mat-card>
-  <mat-form-field>
-    <input matInput [(ngModel)]="name" placeholder="Titre" #fictionTitre>
-    <input matInput [(ngModel)]="name" placeholder="Description" #fictionDescription>
-  </mat-form-field>
-  <label>Description de la fiction:
-    <!--Titre : <input #fictionTitre>-->
-    <!--Description : <input #fictionDescription />-->
-  </label>
-  <!-- (click) passes input value to add() and then clears the input -->
-  <button (click)="addFiction(fictionTitre.value, fictionDescription.value); fictionDescription.value=''">
-    add
-  </button>
-
-</mat-card>
 
