--- a/src/app/components/fictions/fictions.component.html
+++ b/src/app/components/fictions/fictions.component.html
@@ -1,25 +1,35 @@
 <h1>Fictions</h1>
 
-<!--<div [@goals]>-->
-    <!--<form>-->
-        <!--<input type="text" name="items" placeholder="Premier test" [(ngModel)]="displayText">-->
-        <!--<br>-->
-        <!--<span>{{ displayText }}</span>-->
-        <!--<br>-->
-        <!--<input type="submit" [value]="buttonText">-->
-    <!--</form>-->
-<!--</div>-->
+<mat-grid-list cols="3" rowHeight="2:1">
+  <mat-grid-tile *ngFor = "let fiction of fictions" class="carte-item card">
+      <mat-card>
+
+        <mat-card-title>{{fiction.titre}}</mat-card-title>
+
+        <mat-card-content>
+          <p>{{fiction.id}} - {{fiction.uuid}}</p>
+          <p>{{fiction.description}}</p>
+        </mat-card-content>
+
+        <mat-card-actions>
+          <button mat-button (click)="editFiction(fiction)">Edit</button>
+          <button mat-button (click)="removeFiction(fiction)">Delete</button>
+          <a routerLink="/fiction/{{fiction.id}}">Voir la fiction</a>
+        </mat-card-actions>
 
 
-<mat-card *ngFor = "let fiction of fictions">
-    <div class="carte-item card">
-        <h2>{{fiction.titre}}</h2>
-        <p>{{fiction.id}} - {{fiction.uuid}}</p>
-        <p>{{fiction.description}}</p>
+      </mat-card>
+  </mat-grid-tile>
+</mat-grid-list>
 
-        <button mat-button (click)="removeFiction(fiction)">Delete</button>
-        <a routerLink="/fiction/{{fiction.id}}">Voir la fiction</a>
-    </div>
-</mat-card>
+
+<!--<mat-card *ngFor = "let fiction of fictions" class="carte-item card">-->
+        <!--<h2>{{fiction.titre}}</h2>-->
+        <!--<p>{{fiction.id}} - {{fiction.uuid}}</p>-->
+        <!--<p>{{fiction.description}}</p>-->
+
+        <!--<button mat-button (click)="removeFiction(fiction)">Delete</button>-->
+        <!--<a routerLink="/fiction/{{fiction.id}}">Voir la fiction</a>-->
+<!--</mat-card>-->
 
 
