--- a/src/app/pages/page-accueil/page-accueil.component.html
+++ b/src/app/pages/page-accueil/page-accueil.component.html
@@ -2,6 +2,27 @@
   <mat-icon mat-raised-button >add</mat-icon>
 </button>
 
-<app-fictions></app-fictions>
+<h1>Fictions</h1>
 
+<mat-grid-list cols="3" rowHeight="2:1">
+  <mat-grid-tile *ngFor = "let fiction of fictions" class="carte-item card">
+    <mat-card>
+
+      <mat-card-title>{{fiction.titre}}</mat-card-title>
+
+      <mat-card-content>
+        <p>{{fiction.id}} - {{fiction.uuid}}</p>
+        <p>{{fiction.description}}</p>
+      </mat-card-content>
+
+      <mat-card-actions>
+        <button mat-button (click)="editFiction(fiction)">Edit</button>
+        <button mat-button (click)="removeFiction(fiction)">Delete</button>
+        <a routerLink="/fiction/{{fiction.id}}">Voir la fiction</a>
+      </mat-card-actions>
+
+
+    </mat-card>
+  </mat-grid-tile>
+</mat-grid-list>
 
