--- a/src/app/pages/page-fiction-detail/page-fiction-detail.component.html
+++ b/src/app/pages/page-fiction-detail/page-fiction-detail.component.html
@@ -4,7 +4,6 @@
 
         <header class="col-md-12">
           <h1>{{fiction.titre}}</h1>
-
           textes
           personnages
           évènements
@@ -14,12 +13,12 @@
 
         <!--<div class="col-md-5 fiction-info">-->
 
-        <!--<article>-->
-        <!--<h1>{{fiction.titre}}</h1>-->
-        <!--<p>{{fiction.id}} - {{fiction.uuid}}</p>-->
-        <!--<p>timestamp = {{fiction.dateCreation.timestamp | date : 'yyyy-MM-dd HH:mm:ss Z' }}</p>-->
-        <!--<p>{{fiction.description}}</p>-->
-        <!--</article>-->
+        <article>
+          <h1>{{fiction.titre}}</h1>
+          <p>{{fiction.id}} - {{fiction.uuid}}</p>
+          <p>timestamp = {{fiction.dateCreation.timestamp | date : 'yyyy-MM-dd HH:mm:ss Z' }}</p>
+          <p>{{fiction.description}}</p>
+        </article>
 
         <!--<ngb-tabset>-->
 
