--- a/src/app/components/modal-edition/modal-edition.component.html
+++ b/src/app/components/modal-edition/modal-edition.component.html
@@ -1,3 +1,13 @@
-<p>
-  modal-edition works!
-</p>
+<div>
+  <mat-form-field>
+    <input matInput placeholder="Titre" value ='{{fiction.titre}}' #fictionTitre >
+  </mat-form-field>
+  <br>
+  <mat-form-field>
+    <input matInput placeholder="Description" value ='{{fiction.description}}'  #fictionDescription>
+  </mat-form-field>
+  <br>
+  <button mat-button (click)="editFiction(fictionTitre.value, fictionDescription.value)">
+    Créer une fiction
+  </button>
+</div>
