close modal pour add fiction

--- a/src/app/components/add-fiction/add-fiction.component.html
+++ b/src/app/components/add-fiction/add-fiction.component.html
@@ -16,6 +16,8 @@
   <button mat-button (click)="addFiction(fictionTitre.value, fictionDescription.value);">
     Créer une fiction
   </button>
+
+  <button mat-button [mat-dialog-close]>Fermer</button>
 </div>
 
 
