Modale : refactorisation pour les fictions avec ng-if / création d'un component fiction

--- a/src/app/components/add-fiction/add-fiction.component.html
+++ b/src/app/components/add-fiction/add-fiction.component.html
@@ -17,14 +17,8 @@
     Créer une fiction
   </button>
 
-  <button mat-button [mat-dialog-close]>Fermer</button>
+  <!--<button mat-button [mat-dialog-close]>Fermer</button>-->
 </div>
 
 
-
-
-<!--<mat-form-field>-->
-<!--<input matInput [(ngModel)]="name" placeholder="Titre" #fictionTitre>-->
-<!--<input matInput [(ngModel)]="name" placeholder="Description" #fictionDescription>-->
-<!--</mat-form-field>-->
 
