Modal : clean and refacto for add and edit fiction, everything ok except auto-refresh fictions

--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -3,3 +3,13 @@
   <button mat-menu-item>Créer une fiction</button>
   <button mat-menu-item>Paramètres</button>
 </mat-menu>
+
+<div *ngIf="isEditionFiction">
+  Menu conditionnel
+  <ul>
+    <li>Textes</li>
+    <li>Evènements</li>
+    <li>Personnages</li>
+  </ul>
+</div>
+
