--- a/src/app/pages/page-accueil/page-accueil.component.html
+++ b/src/app/pages/page-accueil/page-accueil.component.html
@@ -1,3 +1,6 @@
+<app-menu></app-menu>
+
+
 <button class="add" mat-fab (click)="openDialog()">
   <mat-icon mat-raised-button >add</mat-icon>
 </button>
