Menu conditionnel, mise en place de la logique

--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -4,12 +4,14 @@
   <button mat-menu-item>Paramètres</button>
 </mat-menu>
 
-<div *ngIf="isEditionFiction">
-  Menu conditionnel
+<div *ngIf="fiction">
+  {{fiction.titre}}
   <ul>
     <li>Textes</li>
     <li>Evènements</li>
     <li>Personnages</li>
   </ul>
 </div>
+
+<p>Ajouter une fiction</p>
 
