--- a/src/app/pages/page-fiction-textes/page-fiction-textes.component.html
+++ b/src/app/pages/page-fiction-textes/page-fiction-textes.component.html
@@ -1,8 +1,4 @@
-<app-menu></app-menu>
-
-<ul>
-  <li>Ajouter une fiction</li>
-</ul>
+<app-menu [fiction]="fiction"></app-menu>
 
 <h2>Liste des textes de la fiction {{fiction.titre}}</h2>
 
