--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,4 @@
-@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
+@import '~@angular/material/prebuilt-themes/indigo-pink.css';
 
 body {
   font-family: Roboto, Arial, sans-serif;
@@ -20,6 +20,6 @@ body {
 }
 
 
-.add {
-  background-color: #ffb3b3!important;
-}
+/*.add {*/
+  /*background-color: #ffb3b3!important;*/
+/*}*/
