MD-1:ajout de titre pour le menu

--- a/src/app/pages/page-fiction-personnages/page-fiction-personnages.component.html
+++ b/src/app/pages/page-fiction-personnages/page-fiction-personnages.component.html
@@ -1,4 +1,4 @@
-<app-menu [fiction]="fiction"></app-menu>
+<app-menu [titreMenu] = "titreMenu" [fiction]="fiction"></app-menu>
 
 <h2>Liste des personnages de la fiction {{fiction.titre}}</h2>
 
