--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -2,7 +2,7 @@
 
   <div>Fictio</div>
 
-  <div>Titre de la section</div>
+  <div>{{titreMenu}}</div>
 
   <div *ngIf="fiction">
   {{fiction.titre}}
@@ -16,14 +16,16 @@
 
   <div *ngIf="! fiction">
     <div>
-      <button class="add" mat-mini-fab mat-raised-button color="warn" (click)="openDialog()">
-        <mat-icon >add</mat-icon>
+      <button class="add" mat-raised-button  (click)="openDialog()">
+        <mat-icon>add</mat-icon> fiction
       </button>
     </div>
   </div>
 
   <div>
-    <p>Paramètres</p>
+    <button class="add" mat-raised-button>
+      <mat-icon>settings</mat-icon> paramètres
+    </button>
   </div>
 
 
