MD-11:ajout du bouton d'ajout de texte et de personnage

--- a/src/app/pages/page-fiction-personnages/page-fiction-personnages.component.html
+++ b/src/app/pages/page-fiction-personnages/page-fiction-personnages.component.html
@@ -11,11 +11,18 @@
     <mat-card-content>
       <p>{{personnage.description}}</p>
     </mat-card-content>
-    
+
     <!--<button type="button" (click)="updateTexte(texte);" class="btn btn-outline-dark">Editer</button>-->
     <!--<button type="button" (click)="deleteTexte(texte);" class="btn btn-outline-dark">Supprimer</button>-->
     <!--<a routerLink="/texte/{{texte.id}}">Voir le texte</a>-->
 
   </mat-card>
 
+</div>
+
+<div class="action">
+  <button mat-button>
+    <mat-icon>add</mat-icon>
+    Créer un nouveau personnage
+  </button>
 </div>
