--- a/src/app/pages/page-fiction-textes/page-fiction-textes.component.html
+++ b/src/app/pages/page-fiction-textes/page-fiction-textes.component.html
@@ -21,3 +21,10 @@
   </mat-card>
 
 </div>
+
+<div class="action">
+  <button mat-button>
+    <mat-icon>add</mat-icon>
+    Créer un nouveau texte
+  </button>
+</div>
