--- a/src/app/pages/page-fiction-textes/page-fiction-textes.component.css
+++ b/src/app/pages/page-fiction-textes/page-fiction-textes.component.css
@@ -5,3 +5,10 @@
 .item-card {
   margin-bottom: 10px;
 }
+
+.action {
+  background: white;
+  position : fixed;
+  bottom : 20px;
+  right: 50px;
+}
