MD-4 : ajout de perso pour fiction

--- a/src/app/components/modal/modal.component.html
+++ b/src/app/components/modal/modal.component.html
@@ -9,3 +9,7 @@
 <div *ngIf="data.isEditionFiction">
   <app-edit-fiction></app-edit-fiction>
 </div>
+
+<div *ngIf="data.isAjoutPersonnage">
+  <app-add-personnage [fictionId]="fictionId"></app-add-personnage>
+</div>
