--- a/src/app/pages/page-fiction-personnages/page-fiction-personnages.component.html
+++ b/src/app/pages/page-fiction-personnages/page-fiction-personnages.component.html
@@ -21,7 +21,7 @@
 </div>
 
 <div class="action">
-  <button mat-button>
+  <button mat-button (click)="openDialog()">
     <mat-icon>add</mat-icon>
     Créer un nouveau personnage
   </button>
