--- a/src/app/pages/page-fiction-textes/page-fiction-textes.component.html
+++ b/src/app/pages/page-fiction-textes/page-fiction-textes.component.html
@@ -14,8 +14,12 @@
     </mat-card-content>
 
     <mat-card-actions>
-      <button type="button" (click)="updateTexte(texte);" class="btn btn-outline-dark">Editer</button>
-      <button type="button" (click)="deleteTexte(texte);" class="btn btn-outline-dark">Supprimer</button>
+      <!--<button type="button" (click)="updateTexte(texte);" class="btn btn-outline-dark">Editer</button>-->
+      <button type="button" mat-button  (click)="deleteTexte(texte);">
+        <mat-icon>delete</mat-icon>
+        adieu
+      </button>
+
     <!--<a routerLink="/texte/{{texte.id}}">Voir le texte</a>-->
     </mat-card-actions>
   </mat-card>
